# coles-cli

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/coles_cli/: browser.py  cli.py  conf.py  exceptions.py  session.py  worker.py
src/coles_cli/actions/: __init__.py  auth.py  cart.py  orders.py  products.py
tests/: test_cli.py
